--- a/goBackN.toolbox/Properties_SnapShot_1560751164238/MC.cfg
+++ b/goBackN.toolbox/Properties_SnapShot_1560751164238/MC.cfg
@@ -2,14 +2,14 @@
 CONSTANT CORRUPT_DATA = CORRUPT_DATA
 \* CONSTANT definitions
 CONSTANT
-MESSAGE <- const_156075178363014000
+MESSAGE <- const_15607511572015000
 \* CONSTANT definitions
 CONSTANT
-WINDOW_SIZE <- const_156075178363015000
+WINDOW_SIZE <- const_15607511572016000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* PROPERTY definition
 PROPERTY
 Properties
-\* Generated on Mon Jun 17 18:09:43 NZST 2019
+\* Generated on Mon Jun 17 17:59:17 NZST 2019
