Fix broken multiplacebuffer
Fixed issue with missing prime on states

--- a/goBackN.toolbox/Properties_SnapShot_1560852609320/MC.cfg
+++ b/goBackN.toolbox/Properties_SnapShot_1560852609320/MC.cfg
@@ -2,14 +2,16 @@
 CONSTANT CORRUPT_DATA = CORRUPT_DATA
 \* CONSTANT definitions
 CONSTANT
-MESSAGE <- const_156075308721623000
+MESSAGE <- const_156085260628028000
 \* CONSTANT definitions
 CONSTANT
-WINDOW_SIZE <- const_156075308721624000
+WINDOW_SIZE <- const_156085260628029000
 \* SPECIFICATION definition
 SPECIFICATION
 Spec
 \* PROPERTY definition
 PROPERTY
 Properties
-\* Generated on Mon Jun 17 18:31:27 NZST 2019
+prop_156085260628031000
+prop_156085260628032000
+\* Generated on Tue Jun 18 22:10:06 NZST 2019
